--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@types/ajv": "^1.0.0",
     "@types/colors": "^1.2.1",
+    "@types/cross-spawn": "^6.0.2",
     "@types/node": "^14.0.13",
     "@types/yargs": "^15.0.5",
     "husky": "^4.2.5",
@@ -51,6 +52,7 @@
   "dependencies": {
     "ajv": "^6.12.2",
     "colors": "^1.4.0",
+    "cross-spawn": "^7.0.3",
     "yargs": "^15.3.1"
   },
   "husky": {
